--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 </section> -->
     </main>
 
-    <script src="./javascript/tombola.js"></script>
+    <script src="./javascript/tombola2.js"></script>
   </body>
 </html>
